tomato time done

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,5 @@ $color-red-dark: #d9674e;
 $color-background-white: #ffffff80;
 $color-gray: #707070;
 $color-gray-green: #858C51;
+$color-orange: #F2AA6B;
+$color-light-green: #AFD9A1;
